# ESP32-CAM-Meter-Reader

./: README.md
esp-idf-project/: sdkconfig  sdkconfig.esp32cam  sdkconfig.esp32cam.old  sdkconfig.old
esp-idf-project/components/esp_firebase/: esp_firebase.cpp  esp_firebase.h
esp-idf-project/components/jomjol_controlGPIO/: server_GPIO.cpp  server_GPIO.h
esp-idf-project/components/jomjol_controlcamera/: ClassControllCamera.cpp  server_camera.cpp
esp-idf-project/components/jomjol_fileserver_ota/: server_file.cpp  server_ota.cpp
esp-idf-project/components/jomjol_flowcontroll/: CMakeLists.txt  ClassFlowControll.cpp  ClassFlowControll.h  ClassFlowFirebase.cpp  ClassFlowFirebase.h  ClassFlowMakeImage.cpp  ClassFlowPostProcessing.cpp
esp-idf-project/components/jomjol_tfliteclass/: server_tflite.cpp  server_tflite.h
esp-idf-project/components/jomjol_time_sntp/: time_sntp.cpp
esp-idf-project/main/: main.cpp  server_main.cpp  server_main.h  version.cpp
micro-sd-content/: wlan.ini
micro-sd-content/config/: config.ini
micro-sd-content/html/: edit_alignment.html  edit_analog.html  edit_check.html  edit_config.html  edit_config_param.html  edit_digits.html  edit_explain_0.html  edit_explain_6.html  edit_reference.html  explain_0.html  explain_1.html  explain_2.html  explain_3.html  explain_4.html  explain_5.html  explain_6.html  gethost.js  index.html  index_configure.html  info.html  ota_page.html  prevalue_set.html  readconfigcommon.js  readconfigparam.js  reboot_page.html  setup.html  upload_script.html  wasserzaehler_roi.html
(+3 files in other folders)
